--- a/sicpre-frontend/package.json
+++ b/sicpre-frontend/package.json
@@ -15,14 +15,22 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.2",
+    "html-to-image": "^1.11.11",
     "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^6.0.5",
+    "sweetalert2": "^11.7.21",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
